--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <article>
         <h4>Vídeo Curto: Como funciona a energia solar?</h4>
         <video controls width="320">
-          <source src="video-energia-solar.mp4" type="video/mp4" />
+          <source src="https://pt.khanacademy.org/v/fontes-de-energias-renovaveis-no-brasil" type="video/mp4" />
           Seu navegador não suporta o elemento de vídeo.
         </video>
       </article>
