--- a/index.html
+++ b/index.html
@@ -37,13 +37,19 @@
       margin-top: 1em;
     }
     .foto-depoimentos img {
-      max-width: 150px;
-      border-radius: 8px;
+      max-width: 250px;
+      border-radius: 20px;
     }
     .depoimento {
       font-style: italic;
       max-width: 400px;
     }
+    .infografico-img {
+  max-width: 350px;
+  height: auto;
+  display: block;
+  margin: 1 auto;
+     } /* centraliza a imagem */
   </style>
 </head>
 <body>
@@ -68,7 +74,7 @@
       </p>
       <div class="foto-depoimentos">
         <!-- Espaço para foto -->
-        <img src="foto-turma.jpg" alt="Foto da turma 6° A/B" />
+        <img src="https://vault.pulsarimagens.com.br/file/preview/09CHF018.jpg" alt="Foto da turma 6° A/B" />
         <!-- Depoimentos opcionais -->
         <div class="depoimento">
           <p>"Aprendemos muito sobre como a energia solar pode transformar nosso planeta!" - João, representante da turma</p>
@@ -81,9 +87,10 @@
       <h3>Conteúdos Relacionados ao Subtema</h3>
       <!-- Exemplos: texto, infográfico, vídeo, quiz -->
       <article>
-        <h4>Infográfico: Fontes de Energia Renovável</h4>
-        <img src="infografico-energia.jpg" alt="Infográfico sobre fontes de energia renovável" style="max-width:100%;height:auto;" />
-      </article>
+  <h4>Infográfico: Fontes de Energia Renovável</h4>
+  <img class="infografico-img" src="https://2.bp.blogspot.com/-6691IjpuAOw/WWQePTxRKRI/AAAAAAAB1Xg/mazaGXreGDwRyfKAoH3UG9eA26kUZiifQCLcBGAs/s1600/Instagram_1.png" alt="Infográfico sobre fontes de energia renovável" />
+  <p>Este infográfico mostra as principais fontes de energia renovável e suas características.</p>
+</article>
 
       <article>
         <h4>Vídeo Curto: Como funciona a energia solar?</h4>
