--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
       <article>
         <h4>Vídeo Curto: Como funciona a energia solar?</h4>
         <video controls width="320" preload="metadata" tabindex="0">
-          <source src="https://pt.khanacademy.org/v/fontes-de-energias-renovaveis-no-brasil" type="video/mp4" />
+          <source src="https://www.youtube.com/watch?v=3X9b0Z6v6xk" type="video/mp4" />
           Seu navegador não suporta o elemento de vídeo.
         </video>
       </article>
