--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       --color-text-secondary: #555;
       --color-white: #fff;
       --shadow-light: rgba(0, 82, 204, 0.15);
-      --shadow-dark: rgba(0, 0, 0, 0.12);
+      --shadow-dark: rgba(255, 255, 255, 0.12);
       --font-heading: 'Poppins', sans-serif;
       --font-body: 'Open Sans', sans-serif;
       --border-radius: 14px;
@@ -96,7 +96,7 @@
       font-size: clamp(2.5rem, 5vw, 3.5rem);
       margin: 0 0 0.3rem;
       letter-spacing: 0.12em;
-      text-shadow: 0 2px 6px rgba(0,0,0,0.25);
+      text-shadow: 0 2px 6px rgba(255, 255, 255, 0.25);
       text-transform: uppercase;
     }
     header h2 {
@@ -105,7 +105,7 @@
       font-size: clamp(1.1rem, 2vw, 1.5rem);
       font-style: italic;
       margin: 0 0 1.8rem;
-      text-shadow: 0 1px 3px rgba(0,0,0,0.15);
+      text-shadow: 0 1px 3px rgba(255, 255, 255, 0.15);
     }
     nav {
       display: inline-block;
@@ -448,7 +448,7 @@
 
   <!-- 1) Cabeçalho/Header -->
   <header>
-    <h1>Nome do Evento: EXPO PT 2025</h1>
+    <h1> EXPO PT 2025</h1>
     <h2>Subtema: Mitos e Verdades sobre Energia Renovável</h2>
     <nav>
       <a href="index.html" aria-label="Voltar para a página principal do evento">Página Principal do Evento</a>
@@ -461,12 +461,12 @@
       <h3>Turma Apresentadora: 6° A/B</h3>
       <h4>Título do Projeto: Energia Renovável: Mitos e Verdades</h4>
       <p>
-        Nosso projeto busca esclarecer os principais mitos e verdades sobre as fontes de energia renovável, mostrando sua importância para o futuro sustentável.
+        No nosso projeto, queremos explicar o que é verdade e o que é mito sobre as fontes de energia renovável, mostrando como elas são importantes para cuidar do planeta no futuro.
       </p>
       <div class="foto-depoimentos">
         <img src="https://vault.pulsarimagens.com.br/file/preview/09CHF018.jpg" alt="Foto da turma 6° A/B" tabindex="0" />
         <div class="depoimento" tabindex="0">
-          <p>"Aprendemos muito sobre como a energia solar pode transformar nosso planeta!" - João, representante da turma</p>
+          <p>"A gente aprendeu bastante sobre como a energia solar pode ajudar a cuidar do nosso planeta!" – João, aluno do 6º ano.</p>
         </div>
       </div>
     </section>
@@ -485,7 +485,6 @@
         <h4>Vídeo Curto: Como funciona a energia solar?</h4>
         <video controls width="320" preload="metadata" tabindex="0">
           <source src="https://www.youtube.com/watch?v=3X9b0Z6v6xk" type="video/mp4" />
-          Seu navegador não suporta o elemento de vídeo.
         </video>
       </article>
 
